--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -1,11 +1,13 @@
 #Test
-NTP_SERVER=time.gpsonextra.net
+#NTP_SERVER=time.gpsonextra.net
 #Asia
 # NTP_SERVER=asia.pool.ntp.org
 #Europe
 # NTP_SERVER=europe.pool.ntp.org
 #North America
 # NTP_SERVER=north-america.pool.ntp.org
+#Russia
+# NTP_SERVER=ru.pool.ntp.org
 
 XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra.bin
 XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra.bin
@@ -13,13 +15,17 @@ XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra.bin
 
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
-DEBUG_LEVEL = 4
+DEBUG_LEVEL = 0
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
 
 # supl version 1.0
 SUPL_VER=0x10000
+
+# supl server
+SUPL_HOST=supl.google.com
+SUPL_PORT=7276
 
 # Error Estimate
 # _SET = 1
@@ -93,7 +99,7 @@ SENSOR_ALGORITHM_CONFIG_MASK=0x0
 # Indoor Positioning Settings
 ################################
 # 0: QUIPC disabled, 1: QUIPC enabled, 2: forced QUIPC only
-QUIPC_ENABLED = 0
+QUIPC_ENABLED = 1 
 
 ################################
 # EXTRA SETTINGS
@@ -110,4 +116,4 @@ NMEA_PROVIDER=0
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 1
+LPP_PROFILE = 3
